# graphene-sqlalchemy-auto

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
example/: example.db  run.py
example/fastapi/: Pipfile
example/fastapi_app/: Pipfile  database.py  file.db  main.py  models.py  readme.md
example/flask_app/: Pipfile  app.py  example.db  models.py  readme.md  scheme.py
graphene_sqlalchemy_auto/: __init__.py  filter.py  mutation.py  query.py  types.py
