[tool.poetry]
name = "graphene-sqlalchemy-auto"
version = "1.3.0"
homepage = "https://github.com/goodking-bq/graphene-sqlalchemy-auto"
repository = "https://github.com/goodking-bq/graphene-sqlalchemy-auto.git"
documentation = "https://github.com/goodking-bq/graphene-sqlalchemy-auto"
packages = [
    { include = "graphene_sqlalchemy_auto" }
]
description = """generate default graphene schema from sqlalchemy model base on [graphene-sqlalchemy](https://github.com/graphql-python/graphene-sqlalchemy.git)
"""
readme = "README.md"
authors = ["golden <goodking_bq@hotmail.com>"]
license = "MIT"


[tool.poetry.dependencies]
python = "^3.8"
graphene = "^2.0"
graphene-sqlalchemy = "^2.3.0"
SQLAlchemy = "^1.4"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
